# Echo-Mate

./: .gitignore  .gitmodules  README.md
SDK/: README.md
SDK/luckfox-pico-sdk/: .gitignore
SDK/luckfox-pico-sdk/config/: dts_config
SDK/luckfox-pico-sdk/project/: build.sh
SDK/luckfox-pico-sdk/project/app/wifi_app/: wpa_supplicant.conf
SDK/luckfox-pico-sdk/project/cfg/BoardConfig_IPC/: BoardConfig-SD_CARD-Buildroot-RV1103_EchoMate-DeskMate.mk  BoardConfig-SD_CARD-Buildroot-RV1103_Luckfox_Pico_Plus-IPC.mk  BoardConfig-SD_CARD-Buildroot-RV1106_EchoMate-DeskMate.mk  BoardConfig-SD_CARD-Buildroot-RV1106_Echo_Mate-DeskMate.mk
SDK/luckfox-pico-sdk/sysdrv/tools/board/buildroot/: shadow_defconfig
SDK/rv1106-sdk/: .gitignore
SDK/rv1106-sdk/project/: build.sh
SDK/rv1106-sdk/project/cfg/BoardConfig_IPC/: BoardConfig-SD_CARD-Buildroot-RV1106_Echo_Mate-DeskMate.mk  BoardConfig-SD_CARD-Ubuntu-RV1106_Echo_Mate-DeskMate.mk  BoardConfig-SPI_NAND-Buildroot-RV1106_Echo_Mate-DeskMate.mk
SDK/rv1106-sdk/sysdrv/: Makefile
SDK/rv1106-sdk/sysdrv/drv_ko/wifi/: insmod_wifi.sh
SDK/rv1106-sdk/sysdrv/source/kernel/ipc/: shm.c
SDK/rv1106-sdk/sysdrv/source/kernel/mm/: rmap.c
demo/: README.md
demo/AI_audio/: pyaudio_test.py  xf_ASR_Api.py
demo/Websocket_test/: AudioProcess.cc  AudioProcess.h  CMakeLists.txt  StateMachine.h  WebsocketClient.cc  WebsocketClient.h  main.cc
demo/Websocket_test/test_audio/: test.pcm
demo/yolov5_demo/: README.md
demo/yolov5_demo/cpp/: CMakeLists.txt  main.cc
demo/yolov5_demo/cpp/rv1106_yolov5_demo/: rknn_yolov5_demo
(+31 files in other folders)
